Fixed too long email will cause the phone view to have horizontal scroll bar. Replaced table by col-xs

--- a/public/project/css/style.css
+++ b/public/project/css/style.css
@@ -3100,6 +3100,10 @@ iframe.g-map {
 	padding-top: 10px;
 }
 
+.padding-top-40 {
+	padding-top: 40px;
+}
+
 .padding-bottom-70 {
 	padding-bottom: 50px;
 }
@@ -3120,4 +3124,10 @@ iframe.g-map {
 
 .replyDiv2 .row .col-xs-3, .commentDiv .row .col-xs-3{
 	margin-bottom: 2px;
+}
+
+.profile-info-text {
+	text-align: left;
+	color: #3d1a1b;
+	margin: 10px 0 0 10px;
 }
